--- a/_config.yml
+++ b/_config.yml
@@ -8,4 +8,6 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mazzamac.github.io/mocha-the-week/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: MarianneMacRae
 github_username:  MazzaMac
-theme: null
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme
